<resources>
    <string name="app_name">Hypheny</string>
    <string name="username_choose">Choose your user name*</string>
    <string name="enter_your_email">Enter your email*</string>
    <string name="password">Password*</string>
    <string name="Signup">Signup</string>
    <string name="signin">signin</string>
    <string name="hypheny">Hypheny</string>
    <string name="login">login</string>
    <string name="username_or_email">Username or email*</string>
    <string name="you_are_logged_in">You are logged in!</string>
</resources>